@@ -28,6 +28,8 @@ git-annex (4.20130602) UNRELEASED; urgency=low
     area, since it does not keep track of associated files.)
     Closes: #712060
   * status: No longer shows dead repositories.
+  * annex.debug can now be set to enable debug logging by default.
+    The webapp's debugging check box does this.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 10 Jun 2013 12:52:44 -0400
 
